recipes: - fix recipes grid overlapping issue
dependencies:
- add react-masonry-component

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -95,7 +95,7 @@ nav {
 }
 
 .recipe {
-    margin: 0 auto;
+    margin: 10px 7.5px;
     width: 252px;
     position: relative;
     background-color: #FFF;
